<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/idkey_pading"
    android:weightSum="5" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/light_intensity_mart"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/idkey_text_layout_height"
            android:background="@drawable/title_background"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/idkey_text_paddingLeft"
            android:text="MAC设置"
            android:textColor="@color/idkey_title_text"
            android:textSize="@dimen/idkey_text_textSize"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linear_air_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/idkey_layout_marginTop"
            android:gravity="center_vertical"
            android:weightSum="4" >

            <TextView
                android:id="@+id/air_temperature_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/sensor_a"
                android:textColor="@color/id_key_server_text_color"
                android:textSize="@dimen/text_size_label"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <EditText
                android:id="@+id/sensor_a_edit"
                android:layout_width="0dp"
                android:layout_height="@dimen/mac_btn_margin_start"
                android:layout_weight="2"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:inputType="text"
                android:text="@string/default_sensor_a"
                android:textColor="@color/idkey_editText_textcolor"
                android:textSize="@dimen/text_size_edit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/idkey_layout_marginTop"
            android:gravity="center_vertical"
            android:weightSum="4" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/sensor_b"
                android:textColor="@color/id_key_server_text_color"
                android:textSize="@dimen/text_size_label"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <EditText
                android:id="@+id/sensor_b_edit"
                android:layout_width="0dp"
                android:layout_height="@dimen/mac_btn_margin_start"
                android:layout_weight="2"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:inputType="text"
                android:text="@string/default_sensor_a"
                android:textColor="@color/idkey_editText_textcolor"
                android:textSize="@dimen/text_size_edit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/idley_paddingbottom"
            android:paddingTop="@dimen/idley_paddingtop"
            android:weightSum="6" >

            <Button
                android:id="@+id/btn_keep"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/corner_button_off"
                android:text="@string/keep"
                android:textColor="@color/idkey_button_textcolor"
                android:textSize="@dimen/idkey_button_text_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4" />

<!--            <Button-->
<!--                android:id="@+id/btn_scanner"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@drawable/scanning_button_selector"-->
<!--                android:text="@string/scanner"-->
<!--                android:textColor="@color/idkey_button_textcolor"-->
<!--                android:textSize="@dimen/idkey_button_text_size" />-->

<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="0.4" />-->

<!--            <Button-->
<!--                android:id="@+id/btn_share"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@drawable/share_button_selector"-->
<!--                android:text="@string/share"-->
<!--                android:textColor="@color/idkey_button_textcolor"-->
<!--                android:textSize="@dimen/idkey_button_text_size" />-->
        </LinearLayout>
    </LinearLayout>

</LinearLayout>